@@ -2120,3 +2120,5 @@ Formatter_not_found\:_%0=Formatter_not_found\:_%0
 The_following_formatters_could_not_be_found=The_following_formatters_could_not_be_found
 
 Clear_inputarea=Clear_inputarea
+
+Automatically_set_file_links_for_this_entry=Automatically_set_file_links_for_this_entry
